This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A possible null pointer dereference in compile.c's merge_consts_recursive()
Type: crash Stage: resolved
Components: Interpreter Core Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, methane, miss-islington
Priority: normal Keywords: patch

Created on 2019-03-19 21:45 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12449 merged ZackerySpytz, 2019-03-19 21:48
Messages (2)
msg338411 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2019-03-19 21:45
If PyDict_SetDefault() fails in merge_consts_recursive(), Py_INCREF() will be called on a null pointer.
msg338444 - (view) Author: miss-islington (miss-islington) Date: 2019-03-20 09:16
New changeset 9b4a1b1e23d4a7cb18ad26f405bdc741af69f342 by Miss Islington (bot) (Zackery Spytz) in branch 'master':
bpo-36374: Fix a possible null pointer dereference (GH-12449)
https://github.com/python/cpython/commit/9b4a1b1e23d4a7cb18ad26f405bdc741af69f342
History
Date User Action Args
2022-04-11 14:59:12adminsetgithub: 80555
2019-03-20 09:18:50methanesetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-03-20 09:16:29miss-islingtonsetnosy: + miss-islington
messages: + msg338444
2019-03-20 08:15:27SilentGhostsetnosy: + methane
2019-03-19 21:48:11ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12403
2019-03-19 21:45:28ZackerySpytzcreate