bpo-36374: Fix a possible null pointer dereference (GH-12449)

https://bugs.python.org/issue36374